syntax = "proto3";

package eventsourcing.v1;

option go_package = "github.com/shortlink-org/shortlink/internal/pkg/eventsourcing/v1";

import "google/protobuf/field_mask.proto";
import "eventsourcing/v1/event.proto";

// BaseAggregate contains the basic info
// that all aggregates should have
message BaseAggregate {
  google.protobuf.FieldMask field_mask = 5;

  string id = 1;
  string type = 2;
  int32 version = 3;
  repeated eventsourcing.v1.Event changes = 4;
}
